@@ -7,10 +7,12 @@ extendedangels=Adds recipes and extra tiers of buildings to Angel's Refining, Pe
 [mod-setting-name]
 extangels-adjust-ordering=Adjust building sorting
 extangels-legacy-inventory-sizes=Legacy inventory sizes
+extangels-warehouses-require-previous=Warehouses require previous tier
 
 [mod-setting-description]
 extangels-adjust-ordering=Adjusts the order of icons for buildings in the Petrochemical Refining tab and in the Bioprocessing Nauvis, Vegetabilis and Animalis tabs.
 extangels-legacy-inventory-sizes=Adjusts the inventory sizes of warehouses/logistic warehouses to use the legacy number of inventory slots:\n\n1: 1728/1900\n2: 3072/3378\n3: 4416/4856\n4: 6035/6336
+extangels-warehouses-require-previous=Recipes for Warehouses will require the previous tier as an ingredient, or, in the case of the first tier, will require the base warehouse as an ingredient.
 
 [extendedangels-notifications]
 legacy-inventory-sizes=The defaults for warehouse and logistic warehouse inventory slot counts has changed, the setting "__1__" has been added to restore legacy inventory slot counts if desired, or in the event of items spilling on the ground.
